--- a/style.css
+++ b/style.css
@@ -123,3 +123,84 @@ a {
 .gallery_icon:not(:last-child) {
     margin-right: 30px;
 }
+
+.contact {
+    padding-top: 200px;
+    background-image: url("./Rectangle2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.container_contact{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact_title {
+    font-weight: bold;
+    font-size: 36px;
+    color: #D4C17F;
+}
+
+.contact_text {
+    color: #ffffff;
+    font-size: 20px;
+}
+
+
+input {
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 12px 40px;  
+    margin-right: 10px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, .2);
+    height: 50px;
+    color: #ffffff;
+}
+
+input::placeholder {
+    color: #BEBEBE;
+    font-size: 16px;
+}
+
+.form_item {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+
+
+.btn {
+    margin-top: 10px;
+    padding: 12px 85px;
+    border: none;
+    outline: none;
+    background-color: #D4C17F;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    width: 49%;
+    height: 50px;
+}
+
+.form_text {
+    font-size: 13px;
+    width: 49%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-top: 10px;
+    color: #ffffff;
+}
+
+.form_item {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.form_label {
+    width: 49%;
+}
