--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ html {
     scroll-behavior: smooth;
 }
 
+button {
+    outline: none;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #242B33;
@@ -174,7 +178,6 @@ input::placeholder {
 
 .btn {
     margin-top: 10px;
-    padding: 12px 85px;
     border: none;
     outline: none;
     background-color: #D4C17F;
@@ -203,4 +206,62 @@ input::placeholder {
 
 .form_label {
     width: 49%;
+}
+
+@media screen and (max-width:1150px) {
+    .container {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:900px) {
+    .container_contact{
+        display: block;
+        text-align: center;
+    }
+}
+
+.nav_banner {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, .6);
+    display: none;
+}
+
+.navmob_item {
+    font-size: 50px;
+    text-align: center;
+}
+
+.hamburger {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: none;
+}
+
+.nav_active {
+    display: flex;
+}
+
+@media screen and (max-width:750px) {
+    .banner_title {
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width:550px) {
+    .nav {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
 }
