--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ button {
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #242B33;
 }
 
 a {
@@ -26,7 +25,7 @@ a {
 }
 
 .banner {
-    background-image: url("./Rectangle.jpg");
+    background-image: url("./255_F5_meeting_informal.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     color: #ffffff;
@@ -44,27 +43,18 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    background-color: rgba(36, 43, 51, .5);
+    background-color: rgba(50, 50, 50);
 }
 
 .container_header {
     display: flex;
-    justify-content: space-between;
+
     align-items: center;
 
 }
 
 .logo {
     text-align: center;
-}
-
-.logo_upper {
-    font-size: 32px;
-}
-
-.logo_downer {
-    font-size: 16px;
-    margin-top: -14px;
 }
 
 .nav {
@@ -78,6 +68,9 @@ a {
 .nav_item {
     border-top: 2px solid #ffffff;
     transition: border-top .3s linear;
+    font-size: 20px;
+    margin-left: 100px;
+    
 }
 
 .nav_item:hover {
@@ -102,66 +95,14 @@ a {
     text-align: center;
 }
 
-.gallery {
-    color: #D4C17F;
-    font-weight: bold;
-    font-size: 36px;
-    margin-top: 100px;
-}
-
-.gallery_photo {
-    margin-top: 70px;
-}
-
-.photo_row {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.gallery_icon {
-    width: 40%;
-}
-
-.gallery_icon:not(:last-child) {
-    margin-right: 30px;
-}
-
-.contact {
-    display: flex;
-    align-items: center;
-    background-image: url("./Rectangle2.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 100vh;
-}
-
-.container_contact{
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact_title {
-    font-weight: bold;
-    font-size: 36px;
-    color: #D4C17F;
-}
-
-.contact_text {
-    color: #ffffff;
-    font-size: 20px;
-}
-
 
 input {
-    width: 100%;
+    width: 95%;
     border: none;
     outline: none;
     padding: 12px 40px;  
-    margin-right: 10px;
     text-align: center;
-    background-color: rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .5);
     height: 50px;
     color: #ffffff;
 }
@@ -179,7 +120,6 @@ input::placeholder {
 
 
 .btn {
-    margin-top: 10px;
     border: none;
     outline: none;
     background-color: #D4C17F;
@@ -314,6 +254,37 @@ input::placeholder {
     }
 }
 
+.about {
+    margin: 0;
+    background-color: #dbdbdb;
+}
+
+.container_about {
+    width: 1400px;
+    align-items: center;
+    margin: 0 auto;
+
+}
+
+.about_header_upper {
+    padding-top: 25px;
+    font-size: 50px;
+    text-align: center;
+    color: #000000;
+}
+
+.about_header_downer {
+    margin-top: 30px;
+    font-size: 30px;
+    text-align: center;
+    color: #000000;
+}
+
+.about_text {
+    font-size: 25px;
+    color: #000000;
+}
+
 .footer {
     background-color: #2D343C;
     color: #ffffff;
@@ -332,4 +303,16 @@ input::placeholder {
     margin: 0 auto;
     justify-content: space-evenly;
     margin-top: 10px;
+}
+
+.certificates {
+    margin-top: 30px;
+    font-size: 30px;
+    text-align: center;
+    color: #000000;
+}
+
+.logo_facebook {
+    display: flex;
+    margin-left: 35%;
 }
