--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 }
 
 .banner {
-    background-image: url("./255_F5_meeting_informal.jpg");
+    background-image: url("./table-opt-3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     color: #ffffff;
@@ -39,6 +39,7 @@ a {
 }
 
 .header {
+    z-index: 100;
     position: fixed;
     top: 0;
     left: 0;
@@ -48,7 +49,6 @@ a {
 
 .container_header {
     display: flex;
-
     align-items: center;
 
 }
@@ -69,12 +69,13 @@ a {
     border-top: 2px solid #ffffff;
     transition: border-top .3s linear;
     font-size: 20px;
-    margin-left: 100px;
-    
+    margin-left: 100px;   
 }
 
 .nav_item:hover {
-    border-top: 2px solid rgb(255, 0, 0)
+    border-top: 2px solid rgb(255, 0, 0);
+    text-decoration: none;
+    color:#ffffff
 }
 
 .banner_title {
@@ -267,7 +268,7 @@ input::placeholder {
 }
 
 .about_header_upper {
-    padding-top: 25px;
+    padding-top: 100px;
     font-size: 50px;
     text-align: center;
     color: #000000;
@@ -325,6 +326,7 @@ input::placeholder {
 
 .packet {
     background-color: rgb(50, 50, 50);
+    padding-top: 50px;
 }
 
 .packet_header {
@@ -343,4 +345,14 @@ input::placeholder {
     color: rgb(0, 0, 0);
     text-align: center;
     padding-top: 50px;
+}
+
+.carousel_image {
+    width: 200px;
+    height: 600px;
+}
+
+.container_carousel {
+    display: block;
+    width: 1080px;
 }
